<resources>
    <string name="app_name">Ellipse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBV_3wwnYsxs_1DXBSfMN6LEGRd9AE2Sn8</string>
    <string name="fb_app_id">1057259287662727</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="label_show">SHOW</string>
    <string name="hint_mobilenumber">Mobile number</string>
    <string name="hint_emailaddress">Email address</string>
    <string name="label_or">- OR -</string>
    <string name="hint_enter_code">Enter code</string>
    <string name="label_resend_code">RESEND CODE</string>
    <string name="label_forgot_password">FORGOT PASSWORD</string>
    <string name="hint_password">Password</string>
    <string name="label_signup_content">We’ll send you a verification code via SMS to validate your phone number.</string>
    <string name="network_error">No network</string>
    <string name="toast_message_no_network">No network connection</string>
    <string name="toast_message_facebook_login_failed">Facebook login failed</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign up</string>
    <string name="action_sign_in_short">SIGN UP</string>
    <string name="action_order_ellipse">ORDER YOUR ELLIPSE NOW</string>
    <string name="action_terms_conditions">TERMS AND CONDITIONS</string>
    <string name="action_invite_ellipse">INVITE FRIENDS &amp; EARN CREDITS </string>
    <string name="action_profile_settings">PROFILE &amp; SETTINGS</string>
    <string name="action_emergency_contacts">EMERGENCY CONTACTS</string>
    <string name="action_help">HELP</string>
    <string name="action_rate_the_app">RATE THE APP</string>
    <string name="action_login_in_short">LOG IN</string>
    <string name="action_login_in">Log in</string>
    <string name="action_facebook_log_in_short">LOG IN WITH FACEBOOK</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_mobilenumber">This mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_delete_lock">You are permanently deleting this Ellipse from your account. If you are not paired to your Ellipse you will not be able to put the lock into factory reset. For security reasons, you need to reset your lock before you can transfer it. Please find the reset code, and further instructions in the help section.</string>
    <string name="action_header_delete_ellipse">DELETE THIS ELLIPSE</string>
    <string name="action_label_delete_ellipse">DELETE ELLIPSE</string>
    <string name="share_submit_code">SUBMIT CODE</string>
    <string name="share_connect_now">CONNECT NOW</string>
    <string name="share_connect_later">CONNECT LATER</string>
    <string name="status_notconnect">NOT CONNECTED</string>
    <string name="status_lockunlock">Tap to unlock</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">0e9355c82c76377d4edb845d1d8a6bf1</string>
    <string name="invalid_code">Invalid code</string>
    <string name="invalid_code_message">Please check your invitation code and try again.If you have not received an invitation, ask the
        Ellipse owner to try again.
    </string>
    <string-array name="walkthrough_title">
        <item>Theft alerts</item>
        <item>Crash alerts</item>
        <item>Tap to unlock</item>
        <item>Easily locate your bike</item>
    </string-array>
    <string-array name="walkthrough_description">
        <item>Ellipse can detect if someone’s tampering with your bike, and send you an alert so you can take action.</item>
        <item>Ellipse’s built in accelerometer can detect if you’ve been in a crash, and alert your loved ones.</item>
        <item>Using your smartphone, just one click safely locks or unlocks your Ellipse. No more fumbling with bulky chains.</item>
        <item>Can’t remember where you parked? Use the map tool and get walking directions.</item>
    </string-array>
    <string name="get_started_btn">GET STARTED</string>
    <string name="walkthrough_image_content_desc">Walkthrough Images</string>
    <string name="locksetting_theftandcrash_title">THEFT  &amp; CRASH DETECTION</string>
    <string name="locksetting_devicesetting_title">DEVICE SETTINGS</string>
    <string name="locksetting_toolbar_title">ELLIPSES SETTINGS</string>
    <string name="deletemyaccount">DELETE ACCOUNT</string>
    <string name="myprofile">MY PROFILE</string>
    <string name="addlock1_toolbar_title">WELCOME ON BOARD :)</string>
    <string name="addlock1_title">Press the middle button on your Ellipse.</string>
    <string name="addlock1_description1">Make sure your Ellipse is switched on and within range of your phone.</string>
    <string name="addlock2_description3">Recieved an invitation to share\?</string>
    <string name="addlock2_toolbar_title">SEARCHING FOR AN ELLIPSE</string>
    <string name="addlock2_title">We\'ve found the following Ellipse</string>
    <string name="addlock2_description1">Make sure your Ellipse is switched on and within range of your phone</string>
    <string name="addlock2_description2">Get help</string>
    <string name="addlock2_connect_btn">CONNECT</string>
    <string name="text_verIfication_code">SEND VERIFICATION CODE</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="addlock_home_button_onboard">SET UP MY OWN ELLIPSE</string>
    <string name="addlock_home_description_2">To get the most out of this app you’ll need to set up at least one Ellipse.</string>
    <string name="addlock_home_description_1">Let\'s get you started.</string>
    <string name="addlock_home_description_3">I have received an invitation code to borrow a friend’s Ellipse</string>
    <string name="addlock_home_button_share">ADD A FRIEND’S ELLIPSE</string>
    <string name="title_activity_profileand_settings">ProfileandSettingsActivity</string>
    <string name="title_activity_lock_settings">LockSettingsActivity</string>
    <string name="action_settings_detection_content_first">Either theft or crash detection may be activated, but not both at the same time.  Both require that you are connected to your Ellipse with bluetooth.</string>
    <string name="action_settings_detection_content_next">Learn more</string>
    <string name="action_label_sharingHome_start_button">START SHARING MY ELLIPSE</string>
    <string name="action_sharing_home_content_1">You don\’t need to keep it to yourself either, share with up to 5 friends and help out the people you care most about.</string>
    <string name="action_sharing_home_content_2">Share with friends</string>
    <string name="action_sharing_locklist_header">Select an Ellipse to share</string>
    <string name="action_sharing_locklist_content1">You can share your Ellipse with up to 5 of your friends</string>
    <string name="action_sharing_locklist_content2">Learn more about sharing.</string>
    <string name="action_sharing_locklist_content3">Received an invitation to share a friend\'s Ellipse</string>
    <string name="action_sharing_locklist_content4">Enter an invitation code now</string>
    <string name="title_activity_alert_notification">AlertNotificationActivity</string>
    <string name="title_activity_update_mobile_number">UpdateMobileNumberActivity</string>
    <string name="action_label_theft_description2">Theft detected! </string>
    <string name="action_label_theft_description1">We think someone may be tampering with your bike.</string>
    <string name="action_label_crash_description2">Crash detected!</string>
    <string name="action_label_crash_description1">Your emergency contacts will be alerted in</string>
    <string name="action_label_theft_got_button">OK, GOT IT</string>
    <string name="action_label_updatenumber_title">You can change your phone number but we’ll need to send you an SMS to verify your new number. You cannot undo this.</string>
    <string name="title_activity_delete_account">Deleting your account will permanently remove your profile information, login details, and any Ellipses you have registered to your profile.\n\n
It will also remove any sharing on your own Ellipses and you will not be able to borrow any friend’s bikes.
</string>
    <string name="action_textView_label_delete_account">DELETE MY ACCOUNT
</string>
    <string name="title_activity_add_lock">ELLIPSES</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ec_contact_description">Nominate up to 3 close friends or family members as your emergency contacts. In the event of a crash, they will be alerted.
</string>
    <string name="ec_conatct_title">Ellipse can detect if you’ve been in an accident and alert your chosen emergency contacts by SMS. You can switch this feature on or oﬀ at any time.</string>
    <string name="title_activity_crash_and_theft">CrashAndTheftActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_password_reset">PasswordResetActivity</string>
    <string name="title_activity_sharing">SharingActivity</string>
    <string name="notification_error_ssl_cert_invalid">SSL error occurred. Would you like to proceed?</string>
    <string name="verificationcode_error">The verification code you have entered is incorrect</string>
    <string name="action_loginfailed">Login Failed</string>
    <string name="action_loginfailed_description">Sorry. We couldn\'t log you in right now. Please check your info and try again.You can also sign up using your Facebook account.</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="security_sensitivity">SECURITY SENSITIVITY</string>
    <string name="cancel">CANCEL</string>
    <string name="low">Low</string>
    <string name="log_out">LOG OUT</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="crash">CRASH</string>
    <string name="detection">DETECTION</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="theft">THEFT</string>
    <string name="on">ON</string>
    <string name="you_are_not_connected_to_any_locks">You are not connected to any locks.</string>
    <string name="find_an_ellipse_to_connect_to">Find an Ellipse to connect to.</string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="scanning">Scanning</string>
</resources>