<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_crash_theft_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cc.skylock.skylock.ui.CrashTheftSettingsActivity"
    tools:showIn="@layout/activity_crash_theft_settings">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tv_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@color/ellipses_text_color"
    android:layout_alignParentStart="true"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_marginTop="25dp"
    android:text=""/>

    <RelativeLayout
        android:id="@+id/rl_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="#F7F7F8">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:text="@string/security_sensitivity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/ellipses_text_color" />

    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rl_label_level"
    android:layout_below="@+id/rl_settings_header"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="10dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:id="@+id/tv_low"
        android:textColor="#8b8b8b"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:textColor="#8b8b8b"
        android:id="@+id/tv_medium"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:id="@+id/tv_high"
        android:textColor="#8b8b8b"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
    <ProgressBar
        android:id="@+id/mProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:maxHeight="10dip"
        android:minHeight="10dip"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_below="@+id/rl_label_level"
        android:progressDrawable="@drawable/horizontal_progressbar" />



    <android.support.v7.widget.CardView
        android:id="@+id/cv_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        card_view:cardBackgroundColor="@color/text_color_accent"
        card_view:cardCornerRadius="1dp"
        card_view:cardElevation="1dp">

        <TextView
            android:id="@+id/tv_save_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="16dp"
            android:text="@string/save_changes"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="normal" />
    </android.support.v7.widget.CardView>



</RelativeLayout>
