<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:clickable="true"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/cv_onboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:layout_centerInParent="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:minWidth="88dp"
                android:padding="16dp"
                android:text="@string/addlock_home_button_onboard"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:maxLines="1" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/textView_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="18dp"
        android:textSize="16dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/cv_onboard"
        android:text="@string/addlock_home_description_2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_hint_color" />

    <TextView
        android:id="@+id/textView_description1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true"
        android:text="@string/addlock_home_description_1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8C8C8C" />
    />



    <TextView
        android:id="@+id/textView_description3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/cv_onboard"
        android:text="@string/addlock_home_description_3"
        android:paddingTop="16dp"
        android:textSize="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_hint_color" />
    />
    <android.support.v7.widget.CardView
        android:id="@+id/cv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:layout_below="@+id/textView_description3"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="0dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="0dp">
        <RelativeLayout
            android:id="@+id/rl_add_firends_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/background_layout"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/textView_existing_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/addlock_home_button_share"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>